--- a/about-us.css
+++ b/about-us.css
@@ -575,257 +575,279 @@
   }
 }
 
-.main-wrapper {
+.about-wrapper {
   display: contents;
 }
  
-.main-header78 {
-  gap: var(--dl-layout-space-threeunits);
-  width: 100%;
-  height: auto;
+.about-layout349 {
   display: flex;
   overflow: hidden;
   position: relative;
   align-items: center;
-  flex-shrink: 0;
   flex-direction: column;
 }
  
-.main-content1 {
+.about-max-width {
+  gap: var(--dl-layout-space-fiveunits);
+  display: flex;
+  align-items: center;
+}
+ 
+.about-content1 {
   gap: var(--dl-layout-space-oneandhalfunits);
-  width: 100%;
-  height: auto;
+  flex: 1;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+ 
+.about-section-title {
+  gap: var(--dl-layout-space-oneandhalfunits);
+  display: flex;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-direction: column;
+}
+ 
+.about-content2 {
+  gap: var(--dl-layout-space-oneandhalfunits);
+  display: flex;
+  align-self: stretch;
+  align-items: flex-start;
+  flex-direction: column;
+}
+ 
+.about-image-container {
+  flex: 1;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+ 
+.about-placeholder-image {
+  border-color: var(--dl-color-gray-black);
+  border-width: 0px;
+  border-radius: var(--dl-layout-radius-buttonradius);
+}
+ 
+.about-us-fragment1 {
+  display: contents;
+}
+ 
+.about-us-text10 {
+  display: inline-block;
+  text-transform: uppercase;
+}
+ 
+@media(max-width: 991px) {
+  .about-max-width {
+    gap: var(--dl-layout-space-twounits);
+    flex-direction: column-reverse;
+  }
+}
+
+.team-wrapper {
+  display: contents;
+}
+ 
+.team-max-width {
+  gap: var(--dl-layout-space-fiveunits);
   display: flex;
   position: relative;
   align-items: flex-start;
   flex-direction: column;
 }
  
-.main-column {
-  gap: var(--dl-layout-space-oneandhalfunits);
-  width: auto;
+.team-container {
+  gap: var(--dl-layout-space-twounits);
+  width: 100%;
   display: flex;
-  z-index: 0;
-  align-self: center;
-  align-items: center;
-  padding-top: var(--dl-layout-space-twounits);
-  flex-direction: column;
-  padding-bottom: var(--dl-layout-space-unit);
+  align-items: flex-start;
+  justify-content: center;
 }
  
-.main-content2 {
+.team-card1 {
   gap: var(--dl-layout-space-oneandhalfunits);
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-grow: 1;
+  max-width: 500px;
+  align-items: center;
+  flex-shrink: 0;
+  flex-direction: column;
+}
+ 
+.team-placeholder-image1 {
+  width: var(--dl-layout-size-xlarge);
+  height: var(--dl-layout-size-xlarge);
+}
+ 
+.team-content1 {
+  gap: var(--dl-layout-space-unit);
   display: flex;
   align-self: stretch;
   align-items: center;
   flex-direction: column;
 }
  
-.main-text1 {
+.team-title1 {
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+  flex-direction: column;
+}
+ 
+.team-text1 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+}
+ 
+.team-text2 {
+  font-size: 20px;
   text-align: center;
 }
  
-.main-text2 {
-  text-align: center;
-}
- 
-.main-actions {
+.team-social-icons1 {
   gap: var(--dl-layout-space-unit);
   display: flex;
   align-items: flex-start;
-  padding-top: var(--dl-layout-space-unit);
 }
  
-.main-row-container1 {
+.team-card2 {
+  gap: var(--dl-layout-space-oneandhalfunits);
+  flex: 1;
   width: 100%;
+  display: flex;
+  flex-grow: 1;
+  max-width: 500px;
+  align-items: center;
+  flex-shrink: 0;
+  flex-direction: column;
 }
  
-.main-placeholder-image10 {
-  width: 400px;
-  height: 400px;
+.team-placeholder-image2 {
+  width: var(--dl-layout-size-xlarge);
+  height: var(--dl-layout-size-xlarge);
 }
  
-.main-placeholder-image11 {
-  width: 400px;
-  height: 400px;
+.team-content2 {
+  gap: var(--dl-layout-space-unit);
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+  flex-direction: column;
 }
  
-.main-placeholder-image12 {
-  width: 400px;
-  height: 400px;
+.team-title2 {
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+  flex-direction: column;
 }
  
-.main-placeholder-image13 {
-  width: 400px;
-  height: 400px;
+.team-text3 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
 }
  
-.main-placeholder-image14 {
-  width: 400px;
-  height: 400px;
+.team-text4 {
+  font-size: 20px;
+  text-align: center;
 }
  
-.main-placeholder-image15 {
-  width: 400px;
-  height: 400px;
+.team-social-icons2 {
+  gap: var(--dl-layout-space-unit);
+  display: flex;
+  align-items: flex-start;
 }
  
-.main-placeholder-image16 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image17 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image18 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image19 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image20 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image21 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-row-container2 {
+.team-card3 {
+  gap: var(--dl-layout-space-oneandhalfunits);
+  flex: 1;
   width: 100%;
+  display: flex;
+  flex-grow: 1;
+  max-width: 500px;
+  align-items: center;
+  flex-shrink: 0;
+  flex-direction: column;
 }
  
-.main-placeholder-image22 {
-  width: 400px;
-  height: 400px;
+.team-placeholder-image3 {
+  width: var(--dl-layout-size-xlarge);
+  height: var(--dl-layout-size-xlarge);
 }
  
-.main-placeholder-image23 {
-  width: 400px;
-  height: 400px;
+.team-content3 {
+  gap: var(--dl-layout-space-unit);
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+  flex-direction: column;
 }
  
-.main-placeholder-image24 {
-  width: 400px;
-  height: 400px;
+.team-title3 {
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+  flex-direction: column;
 }
  
-.main-placeholder-image25 {
-  width: 400px;
-  height: 400px;
+.team-text5 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
 }
  
-.main-placeholder-image26 {
-  width: 400px;
-  height: 400px;
+.team-text6 {
+  font-size: 20px;
+  text-align: center;
 }
  
-.main-placeholder-image27 {
-  width: 400px;
-  height: 400px;
+.team-social-icons3 {
+  gap: var(--dl-layout-space-unit);
+  display: flex;
+  align-items: flex-start;
 }
  
-.main-placeholder-image28 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image29 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image30 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image31 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image32 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-placeholder-image33 {
-  width: 400px;
-  height: 400px;
-}
- 
-.main-container2 {
+.about-us-fragment2 {
   display: contents;
 }
  
-.home-fragment1 {
-  display: contents;
-}
- 
-.home-text10 {
+.about-us-text17 {
   display: inline-block;
-  font-family: "Inter";
 }
  
-.home-text12 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text14 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text16 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text18 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text20 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-fragment2 {
+.about-us-fragment4 {
   display: contents;
 }
  
-.home-text22 {
+.about-us-text19 {
   display: inline-block;
-  font-family: "Inter";
 }
  
-.mainroot-class-name {
-  fill: var(--dl-color-gray-black);
-  color: var(--dl-color-gray-black);
-  padding-top: 120px;
+.about-us-fragment3 {
+  display: contents;
 }
+ 
+.about-us-text18 {
+  display: inline-block;
+}
+ 
+
  
 @media(max-width: 767px) {
-  .main-content1 {
-    width: 100%;
+  .team-max-width {
+    align-items: center;
+    flex-direction: column;
   }
 }
  
 @media(max-width: 479px) {
-  .main-actions {
-    width: 100%;
+  .team-container {
     flex-direction: column;
   }
 }
@@ -926,62 +948,44 @@
   }
 }
 
-.home-container {
+.about-us-container {
   width: 100%;
   display: flex;
-  overflow: auto;
   min-height: 100vh;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
   background-image: linear-gradient(180deg, rgb(189, 195, 199) 0.00%,rgb(42, 42, 42) 100.00%);
 }
  
-.home-fragment1 {
+.about-us-fragment1 {
   display: contents;
 }
  
-.home-text10 {
+.about-us-text10 {
   display: inline-block;
-  font-family: "Inter";
+  text-transform: uppercase;
 }
  
-.home-text12 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text14 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text16 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text18 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-text20 {
-  font-style: normal;
-  font-weight: 700;
-}
- 
-.home-fragment2 {
+.about-us-fragment2 {
   display: contents;
 }
  
-.home-text22 {
+.about-us-text17 {
   display: inline-block;
-  font-family: "Inter";
 }
  
-@media(max-width: 1600px) {
-  .home-container {
-    background-image: linear-gradient(180deg, rgb(189, 195, 199) 0.00%,rgb(189, 195, 199) 0.00%,rgb(42, 42, 42) 100.00%);
-  }
+.about-us-fragment3 {
+  display: contents;
+}
+ 
+.about-us-text18 {
+  display: inline-block;
+}
+ 
+.about-us-fragment4 {
+  display: contents;
+}
+ 
+.about-us-text19 {
+  display: inline-block;
 }
